added some world generation and stuff