@@ -5,8 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>xyz.davidpineiro</groupId>
-    <artifactId>mcplugin-intellij-maven-starter</artifactId>
+    <artifactId>blame</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>blameson</module>
+        <module>blame-plugin</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
@@ -15,16 +20,16 @@
 
     <repositories>
         <repository>
-            <id>spigotmc</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
             <id>maven.davidpineiro.release</id>
             <url>s3://davidpineiro-maven/release</url>
         </repository>
         <repository>
             <id>maven.davidpineiro.snapshot</id>
             <url>s3://davidpineiro-maven/snapshot</url>
+        </repository>
+        <repository>
+            <id>spigotmc</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
 
@@ -40,6 +45,22 @@
             <groupId>org.checkerframework</groupId>
             <artifactId>checker-qual</artifactId>
             <version>3.39.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>xyz.jpenilla</groupId>
+            <artifactId>reflection-remapper</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.davidpineiro</groupId>
+            <artifactId>craftbukkit-remapped</artifactId>
+            <version>1.20.4-R0.1</version>
         </dependency>
     </dependencies>
 
@@ -59,7 +80,6 @@
     </distributionManagement>
 
     <build>
-
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -73,7 +93,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>C:\Users\david\BuildToolMavenUploadProject\servers\1.20.1\plugins</outputDirectory>
+                            <outputDirectory>C:\Users\david\BuildToolMavenUploadProject\servers\1.20.4\plugins</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>target</directory>
@@ -88,124 +108,5 @@
                 </executions>
             </plugin>
         </plugins>
-
-        <extensions>
-            <extension>
-                <groupId>com.github.seahen</groupId>
-                <artifactId>maven-s3-wagon</artifactId>
-                <version>1.3.3</version>
-            </extension>
-        </extensions>
     </build>
-    <!--    ripped this straight from https://checkerframework.org/manual/#maven-->
-    <profiles>
-        <profile>
-            <id>checkerframework</id>
-            <!-- If you omit the activation block, run mvn with "-P checkerframework" to run checkers. -->
-            <activation>
-                <jdk>[1.8,)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.1</version>
-                        <configuration>
-                            <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
-                            <annotationProcessorPaths>
-                                <path>
-                                    <groupId>org.checkerframework</groupId>
-                                    <artifactId>checker</artifactId>
-                                    <version>3.39.0</version>
-                                </path>
-                            </annotationProcessorPaths>
-                            <annotationProcessors>
-                                <!-- Add all the checkers you want to enable here -->
-                                <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
-                            </annotationProcessors>
-                            <compilerArgs>
-                                <arg>-Xmaxerrs</arg>
-                                <arg>10000</arg>
-                                <arg>-Xmaxwarns</arg>
-                                <arg>10000</arg>
-                                <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>checkerframework-jdk8</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
-            <properties>
-                <javac.version>9+181-r4173-1</javac.version>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- This plugin execution will copy the com.google.errorprone:javac jar file to
-                             your project’s output directory without adding that jar as an explicit
-                             dependency. -->
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <phase>process-sources</phase>
-                                <configuration>
-                                    <artifact>com.google.errorprone:javac:${javac.version}:jar</artifact>
-                                    <outputDirectory>${project.build.directory}/javac</outputDirectory>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArgs combine.children="append">
-                                <arg>-J-Xbootclasspath/p:${project.build.directory}/javac/javac-${javac.version}.jar</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>checkerframework-jdk9orlater</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArgs combine.children="append">
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
